tests/ui/parser/keyword-typeof.rs
fn main() {
    let typeof = (); //~ ERROR expected identifier, found reserved keyword `typeof`
}
